<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>wxdgaming.mmo</groupId>
    <artifactId>wxdgamin-mmoarpg</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>wxdgaming.mmo.core</module>
        <module>wxdgaming.mmo.gamesr</module>
        <module>wxdgaming.mmo.gamesr-script</module>
        <module>wxdgaming.mmo.loginsr</module>
        <module>wxdgaming.mmo.loginsr-script</module>
        <module>wxdgaming.mmo.message</module>
        <module>wxdgaming.mmo.robotsr</module>
        <module>wxdgaming.mmo.robotsr-script</module>
        <module>wxdgaming.mmo.web</module>
        <module>wxdgaming.mmo.web-script</module>
    </modules>

    <properties>
        <encoding>UTF-8</encoding>
        <java.version>21</java.version>
        <wxd.version>j21-003</wxd.version>
        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
        <maven.compiler.encoding>${encoding}</maven.compiler.encoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.compilerVersion>${java.version}</maven.compiler.compilerVersion>
    </properties>

    <repositories>
        <repository>
            <id>public</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>public</id>
            <name>public</name>
            <url>https://repo1.maven.org/maven2/</url>
        </pluginRepository>
        <pluginRepository>
            <id>central</id>
            <name>central</name>
            <url>https://repo1.maven.org/maven2/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>wxdgaming.boot</groupId>
            <artifactId>wxdgaming.boot.core</artifactId>
            <version>${wxd.version}</version>
        </dependency>
        <dependency>
            <groupId>wxdgaming.boot</groupId>
            <artifactId>wxdgaming.boot.agent</artifactId>
            <version>${wxd.version}</version>
        </dependency>
        <dependency>
            <groupId>wxdgaming.boot</groupId>
            <artifactId>wxdgaming.boot.batis.sql.mysql</artifactId>
            <version>${wxd.version}</version>
        </dependency>
        <dependency>
            <groupId>wxdgaming.boot</groupId>
            <artifactId>wxdgaming.boot.net.http</artifactId>
            <version>${wxd.version}</version>
        </dependency>
        <dependency>
            <groupId>wxdgaming.boot</groupId>
            <artifactId>wxdgaming.boot.net</artifactId>
            <version>${wxd.version}</version>
        </dependency>
        <dependency>
            <groupId>wxdgaming.boot</groupId>
            <artifactId>wxdgaming.boot.starter</artifactId>
            <version>${wxd.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <skip>true</skip>
                    <testFailureIgnore>true</testFailureIgnore>
                    <!-- 定义文件编码，否则nacos配置文件中存在中文会报错 -->
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                </configuration>
            </plugin>
            <plugin>
                <!-- 指定 JDK 版本 -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>
                                ${project.build.directory}/lib
                            </outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target name="usage">
                                <echo message="拷贝资源文件"/>

                                <!--                                <copy tofile="${project.build.directory}/run/agent.jar" overwrite="true">-->
                                <!--                                    <fileset dir="${project.build.directory}/lib/" erroronmissingdir="false">-->
                                <!--                                        <include name="org.wxd.agent*.jar"/>-->
                                <!--                                    </fileset>-->
                                <!--                                </copy>-->

                                <!--                                <copy todir="${project.build.directory}/run/config" overwrite="true">-->
                                <!--                                    <fileset dir="${project.basedir}/config" erroronmissingdir="false">-->
                                <!--                                    </fileset>-->
                                <!--                                </copy>-->

                                <!--                                <copy todir="${project.build.directory}/run/cross_config" overwrite="true">-->
                                <!--                                    <fileset dir="${project.basedir}/cross_config" erroronmissingdir="false">-->
                                <!--                                    </fileset>-->
                                <!--                                </copy>-->

                                <!--                                <copy todir="${project.build.directory}/run" overwrite="true">-->
                                <!--                                    <fileset dir="${project.basedir}/sh" erroronmissingdir="false">-->
                                <!--                                    </fileset>-->
                                <!--                                </copy>-->

                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>src/main/resources/jks</exclude>
                </excludes>
            </resource>
        </resources>
    </build>

    <profiles>
        <profile>
            <id>test-local</id>
            <activation>
                <jdk>21</jdk>
            </activation>
            <properties>

                <mysql-game-db-host>127.0.0.1</mysql-game-db-host>
                <mysql-game-db-port>3306</mysql-game-db-port>
                <mysql-game-db-user>root</mysql-game-db-user>
                <mysql-game-db-pwd>test</mysql-game-db-pwd>
                <mysql-game-db-showsql>false</mysql-game-db-showsql>

                <mysql-login-db-host>127.0.0.1</mysql-login-db-host>
                <mysql-login-db-port>3306</mysql-login-db-port>
                <mysql-login-db-user>root</mysql-login-db-user>
                <mysql-login-db-pwd>test</mysql-login-db-pwd>
                <mysql-login-db-showsql>false</mysql-login-db-showsql>

                <redis-rank-host>127.0.0.1</redis-rank-host>
                <redis-rank-port>6379</redis-rank-port>
                <redis-rank-pwd>test</redis-rank-pwd>

            </properties>
        </profile>
    </profiles>

</project>